@@ -215,6 +215,7 @@ public class PageRequestParsingHandler implements ParsingHandler {
                 contextResources.putAll(stateConfig.getContextResources());
                 beanBuilder.addPropertyValue("contextResources", contextResources);
                 beanBuilder.addPropertyValue("finalizer", stateConfig.getFinalizer());
+                beanBuilder.addPropertyValue("requiresToken", stateConfig.requiresToken());
                 beanBuilder.addPropertyValue("IWrapperPolicy", stateConfig.getIWrapperPolicy());
                 beanBuilder.addPropertyValue("IWrappers", wrapperMap);
                 beanBuilder.addPropertyValue("processActions", stateConfig.getProcessActions());
